♻️refactor: ResDto에 ListDto 추가에 따른 코드 리팩토링